Add more playing logic and style

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,9 +4,10 @@
 //Variables
 $color-bg: #09073f;
 $color-questions: #5f449e;
-$color-discarded: #e18c1d;
+$color-discarded: #bd6b00;
 $color-chosen: #51941e;
 $color-prize: #edbf37;
+$color-button: #2b2891;
 
 // Reset
 *,
